--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --font-heading: "Sen", sans-serif;
+  --primary-color: #ffb900;
+}
 html {
   font-size: 62.5%;
 }
@@ -26,8 +30,11 @@ a {
   font-weight: 600;
   text-align: center;
   color: #fffcf4;
-  border-radius: 24.5px;
+  border-radius: 999px;
   background: #171100;
+}
+.btn:hover {
+  opacity: 0.9;
 }
 /* header */
 .header {
@@ -36,6 +43,7 @@ a {
 .header.fix {
   position: sticky;
   top: -28px;
+  z-index: 1;
 }
 .header .body {
   display: flex;
@@ -76,4 +84,140 @@ header.btn-sign-up {
 }
 .header .action {
   margin-left: 49px;
+}
+/* hero */
+.hero {
+  padding-top: 53px;
+  background-color: #fffcf4;
+}
+.hero .body {
+  display: flex;
+}
+
+/* hero left */
+.hero .media-block {
+  position: relative;
+  width: 48%;
+}
+.hero .media-block .img {
+  width: 470px;
+  height: 685px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+.hero .hero-summary {
+  position: absolute;
+  bottom: 48px;
+  right: 0;
+  background: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0px 16px 32px 0px #0000000d;
+  width: 270px;
+  height: 244px;
+  padding: 24px;
+}
+.hero .hero-summary .item {
+  align-items: center;
+  display: flex;
+}
+.hero-summary .icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff9e8;
+}
+.hero-summary .icon2 {
+  background: #fcefff;
+}
+.hero-summary .icon3 {
+  background: #ebeaff;
+}
+.hero-summary .info {
+  margin-left: 16px;
+}
+.hero-summary .lable {
+  font-size: 1.4rem;
+  line-height: 1.86;
+  color: #5f5b53;
+}
+.hero-summary .title {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67;
+}
+/* hero right */
+.hero .content-block {
+  width: 52%;
+  padding-left: 130px;
+  padding-top: 64px;
+}
+.hero .content-block .heading {
+  font-family: var(--font-heading);
+  font-size: 5.8rem;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: -1.16px;
+  color: #171100;
+}
+.content-block .desc {
+  font-size: 1.8rem;
+  line-height: 1.67;
+  color: #5f5b53;
+  margin-top: 22px;
+}
+.content-block .cta-group {
+  margin-top: 38px;
+  display: flex;
+  align-items: center;
+}
+.content-block .cta-hero {
+  min-width: 180px;
+  background-color: var(--primary-color);
+  line-height: 64px;
+}
+.hero .watch-video {
+  border: none;
+  background-color: transparent;
+  display: flex;
+  margin-left: 28px;
+  align-items: center;
+  cursor: pointer;
+}
+.content-block .cta-group .watch-video .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background: #ffffff;
+  box-shadow: 0px 8px 16px 0px #00000012;
+}
+.content-block .watch-video span {
+  margin-left: 14px;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67;
+  color: #171100;
+}
+.hero .desc-recent {
+  margin-top: 48px;
+}
+.hero .starts {
+  margin-top: 8px;
+}
+.hero .starts strong {
+  font-family: var(--font-heading);
+  font-size: 4.4rem;
+  font-weight: 700;
+  line-height: 1.23;
+  color: #171100;
+  margin-right: 14px;
+}
+.hero .starts strong:nth-child(2) {
+  margin-left: 28px;
 }
