p7 làm phần feedback

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,18 @@ a {
   cursor: pointer;
   opacity: 0.9;
 }
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 1);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.line-clamp.line-2 {
+  --line-clamp: 2;
+}
+.break-all {
+  word-break: break-all;
+}
 /* header */
 .header {
   background-color: #fffcf4;
@@ -283,6 +295,7 @@ header.btn-sign-up {
   object-fit: cover;
 }
 .popular .course-list .course-item {
+  flex: 1;
   border-radius: 12px;
   background-color: #fff;
   border: 1px solid #e2dfda;
@@ -337,4 +350,69 @@ header.btn-sign-up {
 }
 .course-item .foot .btn-book:hover {
   background-color: var(--primary-color);
+}
+/* feedback  */
+.feedback {
+  margin-top: 135px;
+  background-color: #2e2100;
+  padding: 96px 0;
+}
+.feedback .feedback-list {
+  display: flex;
+  overflow: hidden;
+}
+.feedback .feedback-item {
+  width: 100%;
+  display: flex;
+  flex-shrink: 0;
+}
+
+.feedback .feedback-item .info .avata {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.feedback-item .member-name {
+  margin-top: 18px;
+  font-family: var(--font-heading);
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.42;
+  color: #f7f7f7;
+}
+.feedback-item .desc {
+  margin-top: 4px;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.86;
+  color: #bfbcb2;
+}
+.feedback-item .dots {
+  margin-top: 28px;
+  display: flex;
+  gap: 6px;
+}
+.feedback-item .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #634700;
+  gap: 6px;
+  cursor: pointer;
+}
+.feedback-item .dot.active {
+  background-color: var(--primary-color);
+  cursor: default;
+}
+.feedback-item .content {
+  width: 66%;
+  margin-left: auto;
+}
+.feedback-item blockquote {
+  font-size: 2.6rem;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 1.54;
+  color: #fff;
 }
