--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,3 +416,58 @@ header.btn-sign-up {
   line-height: 1.54;
   color: #fff;
 }
+/* features */
+.features {
+  margin-top: 135px;
+  padding: 65px 0;
+}
+.features .body {
+  display: flex;
+  justify-content: space-between;
+}
+.features .images {
+  display: flex;
+  gap: 30px;
+}
+.features .images img {
+  width: 270px;
+  height: 404px;
+  border-radius: 16px;
+  object-fit: cover;
+}
+.features .lower {
+  margin-top: 34px;
+}
+.features .content {
+  width: 41%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.features .desc {
+  margin-top: 16px;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75;
+  color: #5f5b53;
+}
+.features .cta-btn {
+  margin-top: 32px;
+  width: 137px;
+  height: 50px;
+  background-color: var(--primary-color);
+}
+/* features 2 */
+.features-2 {
+  margin-top: 70px;
+}
+.features-2 .body {
+  flex-direction: row-reverse;
+}
+.features-2 .body .content {
+  width: 49%;
+}
+.features-2 .images img {
+  width: 470px;
+  height: 440px;
+}
